<resources>
    <string name="app_name">WebPaper</string>
    <string name="wallpaper_service_name">WebPaper Live Wallpaper</string>
    <string name="wallpaper_description">Display any website as your live wallpaper</string>
    <string name="msg_url_invalid">Please enter a valid URL</string>
    <string name="resume_type">Resume type</string>
    <string name="resume_realtime">Realtime (no delay)</string>
    <string name="resume_time_delay">Time-based delay</string>
    <string name="resume_gesture">Resume with selected gesture</string>
    <string name="delay_ms_hint">Delay in milliseconds</string>
    <string name="gesture_configuration">Gesture Configuration</string>
    <string name="gesture_long_click">Long click (hold)</string>
    <string name="gesture_long_click_end">Long click end</string>
    <string name="gesture_tap_area">Tap on area</string>
    <string name="gesture_swipe_left">Swipe left</string>
    <string name="gesture_swipe_right">Swipe right</string>
    <string name="add_gesture">Add Gesture</string>
    <string name="remove_gesture">Remove</string>
    <string name="gesture_delay_ms_hint">Delay (ms)</string>
    <string name="custom_js_hint">JavaScript code</string>
    <string name="no_gestures_configured">No gestures configured. Add one above.</string>
    <string name="save_url">Save URL</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="note">Note: Make sure to save the URL before setting as wallpaper</string>
    <string name="title">WebPaper</string>
    <string name="subtitle">Configure the URL to display as your live wallpaper</string>
</resources>